tests/fsharp/typecheck/sigs/neg46.bsl

neg46.fs(6,8,6,26): typecheck error FS0912: This declaration element is not permitted in an augmentation

neg46.fs(10,8,10,33): typecheck error FS0912: This declaration element is not permitted in an augmentation

neg46.fs(14,8,14,26): typecheck error FS0912: This declaration element is not permitted in an augmentation

neg46.fs(18,8,19,21): typecheck error FS0912: This declaration element is not permitted in an augmentation

neg46.fs(23,8,23,32): typecheck error FS0912: This declaration element is not permitted in an augmentation

neg46.fs(27,8,27,25): typecheck error FS0912: This declaration element is not permitted in an augmentation

neg46.fs(31,8,32,21): typecheck error FS0912: This declaration element is not permitted in an augmentation

neg46.fs(36,8,36,25): typecheck error FS0912: This declaration element is not permitted in an augmentation

neg46.fs(40,8,40,26): typecheck error FS0912: This declaration element is not permitted in an augmentation

neg46.fs(44,8,44,31): typecheck error FS0912: This declaration element is not permitted in an augmentation

neg46.fs(48,8,48,34): typecheck error FS0912: This declaration element is not permitted in an augmentation

neg46.fs(52,8,52,39): typecheck error FS0912: This declaration element is not permitted in an augmentation

neg46.fs(56,8,56,11): typecheck error FS3192: Constructors are not permitted as extension members - they must be defined as part of the original definition of the type

neg46.fs(56,8,56,11): typecheck error FS0871: Constructors cannot be defined for this type

neg46.fs(56,17,56,20): typecheck error FS0787: The inherited type is not an object model type

neg46.fs(56,17,56,20): typecheck error FS0696: This is not a valid object construction expression. Explicit object constructors must either call an alternate constructor or initialize all fields of the object and specify a call to a super class constructor.

neg46.fs(60,8,60,19): typecheck error FS0912: This declaration element is not permitted in an augmentation

neg46.fs(64,8,64,26): typecheck error FS0912: This declaration element is not permitted in an augmentation

neg46.fs(68,18,68,36): typecheck error FS0909: All implemented interfaces should be declared on the initial declaration of the type

neg46.fs(73,18,73,36): typecheck error FS0909: All implemented interfaces should be declared on the initial declaration of the type